[package]
name = "headers"
version = "0.1.0"
edition = "2021"
authors = ["Antoine de Barbarin <mail@adebarbarin.com>"]
license = "GPL-3.0-only"
description = "A simple CLI tool to retrieve HTTP headers"

[dependencies]
clap = "4.5.21"
console = "0.15.8"
error-chain = "0.12.4"
http = "1.1.0"
reqwest = "0.12.9"
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "macros"] }

[package.metadata.rpm]
package = "headers"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
headers = { path = "/usr/bin/headers" }
